[gd_scene load_steps=4 format=3 uid="uid://bats421k57p1n"]

[ext_resource type="Script" path="res://Resources/Cards/full_art_class.gd" id="1_gnid3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mc4f2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tcewj"]
bg_color = Color(0.0807833, 0.0807834, 0.0807833, 0.466667)

[node name="StrikeFullArt" type="Node2D"]
script = ExtResource("1_gnid3")

[node name="FullArtImage" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="DetailsBG" type="Panel" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 40.0
theme_override_styles/panel = SubResource("StyleBoxFlat_mc4f2")

[node name="DetailsContainer" type="VBoxContainer" parent="DetailsBG"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 324.0
offset_bottom = 56.0

[node name="Name" type="Label" parent="DetailsBG/DetailsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Strike"

[node name="EffectContainer" type="HBoxContainer" parent="DetailsBG/DetailsContainer"]
layout_mode = 2

[node name="Effect" type="Label" parent="DetailsBG/DetailsContainer/EffectContainer"]
layout_mode = 2
text = "Effect: "

[node name="EffectLabel" type="Label" parent="DetailsBG/DetailsContainer/EffectContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "
"

[node name="CDContainer" type="HBoxContainer" parent="DetailsBG/DetailsContainer"]
layout_mode = 2

[node name="CD" type="Label" parent="DetailsBG/DetailsContainer/CDContainer"]
layout_mode = 2
text = "CD: "

[node name="CDLabel" type="Label" parent="DetailsBG/DetailsContainer/CDContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="CDRemainingCont" type="HBoxContainer" parent="DetailsBG/DetailsContainer"]
layout_mode = 2

[node name="CDRemaining" type="Label" parent="DetailsBG/DetailsContainer/CDRemainingCont"]
layout_mode = 2
text = "CD Remaining: "

[node name="CDRemainingLabel" type="Label" parent="DetailsBG/DetailsContainer/CDRemainingCont"]
unique_name_in_owner = true
layout_mode = 2

[node name="BGDimmer" type="Panel" parent="."]
z_index = 4
z_as_relative = false
offset_left = -1749.0
offset_top = -1522.0
offset_right = 2052.0
offset_bottom = 1153.0
theme_override_styles/panel = SubResource("StyleBoxFlat_tcewj")
